# python-cli-tool

./: .gitignore  README.md  pyproject.toml
sample_data/output/: status_codes.csv  summary.csv  top_ips.csv  top_paths.csv
scripts/: generate_sample_log.py
src/logtool/: analyze.py  cli.py  export.py  parser.py  plotting.py
